# Interpretes:

# Intérpretes: Odette Ernest Dias (flauta), Jorge Postel (oboé), José Botelho (clarinete), Zdenek Svab (trompa) e Noel Devos (fagote)

# id Integer *
# id_apresentacao *
# id_instrumento *
# Nome do intérprete String *

# Só permitir que instrumentos cadastrados na instrumentação sejam "usados" pelos intérpretes

class Interprete:
    pass
