erDiagram
    COMPOSICAO {
        INTEGER id PK
        UUID composicao_id
        VARCHAR titulo
        VARCHAR data_composicao
        VARCHAR categoria
        TEXT observacao
        DATETIME created_at
        VARCHAR created_by
        DATETIME updated_at
        VARCHAR updated_by
    }

    SUBTITULO {
        INTEGER id PK
        INTEGER id_composicao FK
        VARCHAR subtitulo
        VARCHAR lingua
        DATETIME created_at
        VARCHAR created_by
        DATETIME updated_at
        VARCHAR updated_by
    }

    APRESENTACAO {
        INTEGER id PK
        INTEGER id_composicao FK
        VARCHAR localidade
        VARCHAR local
        VARCHAR evento
        DATE data_evento
        BOOLEAN estreia
        VARCHAR url_evento
        VARCHAR regencia
        DATETIME created_at
        VARCHAR created_by
        DATETIME updated_at
        VARCHAR updated_by
    }

    INSTRUMENTO {
        INTEGER id PK
        VARCHAR nome
        VARCHAR grupo
        DATETIME created_at
        VARCHAR created_by
        DATETIME updated_at
        VARCHAR updated_by
    }

    INSTRUMENTACAO {
        INTEGER id PK
        INTEGER id_instrumento FK
        INTEGER id_composicao FK
        DATETIME created_at
        VARCHAR created_by
        DATETIME updated_at
        VARCHAR updated_by
    }

    INTERPRETE {
        INTEGER id PK
        INTEGER id_apresentacao FK
        INTEGER id_instrumento FK
        VARCHAR nome
        VARCHAR url_artista
        DATETIME created_at
        VARCHAR created_by
        DATETIME updated_at
        VARCHAR updated_by
    }

    COMPOSICAO ||--o{ SUBTITULO : "has"
    COMPOSICAO ||--o{ APRESENTACAO : "has"
    COMPOSICAO ||--o{ INSTRUMENTACAO : "has"
    APRESENTACAO ||--o{ INTERPRETE : "has"
    INSTRUMENTO ||--o{ INTERPRETE : "played by"
    INSTRUMENTO ||--o{ INSTRUMENTACAO : "used in"
